--- a/pom.xml
+++ b/pom.xml
@@ -7,16 +7,27 @@
   <groupId>com.example</groupId>
   <artifactId>demo</artifactId>
   <version>1.0-SNAPSHOT</version>
-
+	<packaging>pom</packaging>
   <name>demo</name>
   <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>1.17</maven.compiler.source>
-    <maven.compiler.target>1.17</maven.compiler.target>
+    <maven.compiler.source>1.11</maven.compiler.source>
+    <maven.compiler.target>1.11</maven.compiler.target>
   </properties>
+
+  <repositories>
+    <repository>
+			<id>gdx-nightlies</id>
+			<url>https://oss.sonatype.org/content/repositories/snapshots/</url>
+		</repository>
+		<repository>
+			<id>gdx-releases</id>
+			<url>https://oss.sonatype.org/content/repositories/releases/</url>
+		</repository>
+  </repositories>
 
   <dependencies>
     <dependency>
@@ -24,6 +35,33 @@
       <artifactId>junit</artifactId>
       <version>4.11</version>
       <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>com.badlogicgames.gdx</groupId>
+      <artifactId>gdx</artifactId>
+      <version>1.2.0</version>
+    </dependency>
+
+    <dependency>
+      <groupId>com.badlogicgames.gdx</groupId>
+      <artifactId>gdx-backend-lwjgl</artifactId>
+      <version>1.2.0</version>
+    </dependency>
+
+    <dependency>
+      <groupId>com.badlogicgames.gdx</groupId>
+      <artifactId>gdx-platform</artifactId>
+      <version>1.2.0</version>
+      <classifier>natives-desktop</classifier>
+    </dependency>
+
+    <dependency>
+      <groupId>com.badlogicgames.gdx</groupId>
+      <artifactId>gdx-platform</artifactId>
+      <version>1.2.0</version>
+      <classifier>natives-armeabi-v7a</classifier>
+      <scope>provided</scope>
     </dependency>
   </dependencies>
 
@@ -41,8 +79,13 @@
           <version>3.0.2</version>
         </plugin>
         <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-compiler-plugin</artifactId>
           <version>3.8.0</version>
+          <configuration>
+            <source>11</source>
+            <target>11</target>
+          </configuration>
         </plugin>
         <plugin>
           <artifactId>maven-surefire-plugin</artifactId>
@@ -69,7 +112,34 @@
           <artifactId>maven-project-info-reports-plugin</artifactId>
           <version>3.0.0</version>
         </plugin>
+        
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>exec-maven-plugin</artifactId>
+				<version>1.4.0</version>
+				<configuration>
+          <executableDependency>
+            <groupId>com.example</groupId>
+            <artifactId>mygame-desktop</artifactId>
+          </executableDependency>
+				  <mainClass>com.mytest.java.MyGameDesktop</mainClass>
+          <classPath></classPath>
+				</configuration>
+			  </plugin>
       </plugins>
     </pluginManagement>
   </build>
+
+  <profiles>
+		<profile>
+			<id>desktop</id>
+			<modules>
+				<module>desktop</module>
+			</modules>
+		</profile>
+	</profiles>
+
+  <modules>
+		<module>core</module>
+	</modules>
 </project>
